# protorpc3-cxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-debug-proj-mt.bat  build-win32.bat  build-win64.bat  libprotobuf-lite.cmake  libprotobuf.cmake  libprotoc.cmake
examples/: arith_test.cc  echo_test.cc  hello.cc  rpcclient.cc  rpcserver.cc  rpctest.cc
examples/message.pb/: arith.pb.cc  arith.pb.go  arith.pb.h  echo.pb.cc  echo.pb.go  echo.pb.h
examples/service.pb/: Makefile  arith.pb.cc  arith.pb.h  arith.protorpc.cc  arith.protorpc.golden.cc  arith.protorpc.golden.h  arith.protorpc.h  echo.pb.cc  echo.pb.h  echo.proto  echo.protorpc.cc  echo.protorpc.golden.cc  echo.protorpc.golden.h  echo.protorpc.h
examples/service.pb/gopkg.pb/: echo.pb.go
protorpc/: CMakeLists.txt
protorpc/examples/: arith_test.cc  echo_test.cc  rpcclient.go  rpcserver.go
protorpc/examples/message.pb/: Makefile  arith.pb.cc  arith.pb.h  echo.pb.cc  echo.pb.h
protorpc/examples/service.pb/: arith.pb.cc  arith.pb.h  arith.proto  arith.protorpc.cc  arith.protorpc.h  echo.pb.cc  echo.pb.h  echo.proto  echo.protorpc.cc  echo.protorpc.h
protorpc/examples/service.pb/gopkg.pb/: arith.pb.go
protorpc/src/protorpc/: rpc_client.cc  rpc_conn_posix.cc  rpc_crc32.h  rpc_server.cc  rpc_server.h  rpc_server_conn.h  rpc_service.h  rpc_wire.h
protorpc/src/protorpc/compiler/: protorpc_generator_header.cc  protorpc_generator_source.cc  protorpc_plugin.h
protorpc/src/protorpc/snappy/: protorpc-snappy-sinksource.cc  protorpc-snappy-stubs-internal.cc  protorpc-snappy-stubs-public.h  protorpc-snappy.h
protorpc/src/protorpc/wire.pb/: update_pb.bat  wire.pb.cc  wire.pb.h
src/protorpc/: rpc_client.cc  rpc_client.h  rpc_conn.cc  rpc_conn.h  rpc_conn_posix.cc  rpc_conn_windows.cc  rpc_crc32.cc  rpc_crc32.h  rpc_env.cc  rpc_env.h  rpc_env_posix.cc  rpc_env_windows.cc  rpc_server.cc  rpc_server.h  rpc_server_conn.cc  rpc_server_conn.h  rpc_service.cc  rpc_service.h  rpc_wire.cc  rpc_wire.h
src/protorpc/compiler/: config.h  cpp_generator.cc  cpp_generator.h  cpp_generator_header.cc  cpp_generator_helpers.h  cpp_generator_source.cc  cpp_plugin.cc  cpp_plugin.h  cpp_plugin_header.h  cpp_plugin_source.h  generator_helpers.h  main.cc  protorpc_generator.h  protorpc_generator_header.cc  protorpc_generator_source.cc  protorpc_plugin.cc  protorpc_plugin_helpers.h
src/protorpc/snappy/: protorpc-snappy-internal.h  protorpc-snappy-sinksource.h  protorpc-snappy-stubs-internal.h  protorpc-snappy.cc
src/protorpc/wire.pb/: Makefile  wire.pb.cc  wire.pb.h  wire.proto
test/: test.cc  test.h
